--- a/src/shared/ui/top-navbar/TopNavbar.module.css
+++ b/src/shared/ui/top-navbar/TopNavbar.module.css
@@ -1,5 +1,7 @@
 .container {
   position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
   z-index: 50;
 }
